2006-05-09	Rupert Germann <rupi@gmx.li>

	* added italian translation. Thanks to Claudio Strizzolo.

2006-04-27	Rupert Germann <rupi@gmx.li>

	* feature: added two new category modes:
		2 = select only categories which have all the selected categories assigned (AND)
		-2 = show only categories which have none of the selected categories assigned (OR)
	* fix: changed the default RTE configuration in tca.php. Now the RTE in tt_news can be configured with the presets from the rteHtmlarea extension configuration.
	* raised the number of categories which can be selected in the tt_news content element to 99.
	* removed the option 'oldCatDeselectMode' because it did the same as categoryMode=-1

2006-04-24	Rupert Germann <rupi@gmx.li>

	* fix (bug 3322): fixed a bug that caused a MySQL error concerning the sorting of categories and which appeared when "displaySubCategories" was enabled.

2006-04-21	Rupert Germann <rupi@gmx.li>

	* fix: added the fix for "New or edited news records were not displayed in TYPO3 version below 4.0" to tt_news categories, too.
	* fix: added some labels to the pi/locallang.xml file
	* added slovak translation for locallang_tca.xml. thanks to George from Slovakia.
	* version nr: 2.3.5

2006-04-19	Rupert Germann <rupi@gmx.li>

	* fix: New or edited news records were not displayed in TYPO3 version below 4.0. Added a function to class.tx_ttnews_tcemain which adds the missing 0 to the fe_group field. Added a condition to ext_tables.php which changes the fe_group field configuration under TYPO3 lower than 4.0 back to the old state.
	* updated function indexes and copyrights
	* version nr: 2.3.3

2006-04-18	Rupert Germann <rupi@gmx.li>

	* fix: Empty news records were displayed in workspace previews. Added a check to function getSelectConf which removes news records from WS preview which are hidden in the live Workspace AND in the draft workspace.
	* fix: changed direct preview for news. Now it works only in the live workspace
	* version nr: 2.3.2
